# asm_tools

./: .gitignore  BeagleLogic.hs  CPU.hs  CSV.hs  Causal.hs  EDIF.hs  Forth.hs  Makefile  MyHDL.hs  MyHDLRun.hs  Names.hs  NetFun.hs  PCF.hs  Partition.hs  Protel.hs  Pru.hs  PruEmu.hs  PruGen.hs  PruLib.hs  README.html  README.md  RTL.hs  RTLEmu.hs  RTLGen.hs  RTLLib.hs  RTLNet.hs  SE.hs  SMap.hs  Seq.hs  SeqApp.hs  SeqArr.hs  SeqC.hs  SeqEmu.hs  SeqExpr.hs  SeqIfElse.hs  SeqKleisli.hs  SeqLib.hs  SeqNet.hs  SeqNetList.hs  SeqPrim.hs  (+47 more)
Data/AsmTools/: CSV.hs  DigiView.hs  Make.hs  NetFun.hs  Partition.hs  VCD.hs
Examples/Seq/: f_blink.hs  f_soc.hs
Language/: MakeDeps.hs  Pru.hs  Seq.hs
Language/Pru/: BeagleLogic.hs  Emu.hs  Gen.hs  Lib.hs  Pru.hs  PruEmu.hs  Weave.hs
Language/Seq/: App.hs  C.hs  CPU.hs  Emu.hs  Expr.hs  Forth.hs  IfElse.hs  Lib.hs  MyHDL.hs  MyHDLRun.hs  Names.hs  NetList.hs  Prim.hs  Static.hs  Syntax.hs  TH.hs  Term.hs  Verilog.hs  VerilogRun.hs
Language/Seq/Test/: Lib.hs  Tools.hs
asm-tools/: Makefile  asm-tools.cabal  asm-tools.hs  release.nix
asm-tools-axbc/: Makefile  README.obsolete  asm-tools-axbc.cabal  release.nix
asm-tools-axbc/Language/: AXBC.hs
asm-tools-axbc/Language/AXBC/: Lib.hs
asm-tools-cont/: Makefile  asm-tools-cont.cabal  release.nix
asm-tools-cont/Language/: Cont.hs
asm-tools-dsp/: README.md
asm-tools-dsp/Language/DSP/: Interp.hs  Test.hs
asm-tools-edsp/: Makefile  asm-tools-edsp.cabal  release.nix
asm-tools-edsp/Language/: EDSP.hs
asm-tools-edsp/Language/EDSP/: C.hs  LLVM.hs  Lib.hs  Test.hs
asm-tools-grid/: Makefile  asm-tools-grid.cabal  release.nix
asm-tools-grid/Language/: Grid.hs
asm-tools-grid/Language/Grid/: LTA.hs  Loop.hs  StateCont.hs
asm-tools-pru/: Makefile  asm-tools-pru.cabal  release.nix
asm-tools-pru/Language/: Pru.hs
asm-tools-pru/Language/Pru/: BeagleLogic.hs  Gen.hs  Lib.hs
asm-tools-seq/: Makefile  Seq.org  asm-tools-seq.cabal  release.nix
asm-tools-seq-dt/: Makefile  asm-tools-seq-dt.cabal  release.nix
asm-tools-seq-dt/Language/: SeqDT.hs
asm-tools-seq/Language/: Seq.hs
asm-tools-seq/Language/Seq/: Algebra.hs  App.hs  Arr.hs  C.hs  CPU.hs  DSP.hs  Emu.hs  Forth.hs  IfElse.hs  Lib.hs  Loop.hs  MyHDL.hs  NetList.hs  Prim.hs  Syntax.hs  TH.hs  Term.hs  TermLoop.hs  Unwrap.hs  Verilog.hs  VerilogRun.hs  Z.hs
asm-tools-seq/Language/Seq/Examples/: FSoc.hs
asm-tools-seq/Language/Seq/Test/: Lib.hs  SeqQC.hs  TestLib.hs  TestTools.hs  Tools.hs
asm-tools-top/: Main.hs  asm-tools-top.cabal
asm-tools/Data/AsmTools/: CSV.hs  CmdLineTool.hs  DigiView.hs  EDIF.hs  FastCSV.hs  MT.hs  Make.hs  NLSpec.hs  NetFun.hs  PCF.hs  Partition.hs  PcbNew.hs  Protel.hs  SE.hs  SetMap.hs  VCD.hs  test.db
asm-tools/Language/: NLSpec.hs
asm-tools/Test/: RunC.hs
doodle/: Makefile  README.md  doodle.hs
emacs/: nlspec.el  nlspec.org
example/: Makefile  testbench.v
examples/: csv2vcd.hs  csv2vcd_spi.hs  dump.hs  f_soc.hs  run_codegen.hs  t_cosim.hs
examples/verilog/: Makefile  cosim.c  testbench.v
ghcid/: Language  Makefile  README  asm-tools-ghci.cabal  ghcid.sh  main.hs  release.nix
hs/: BeagleLogic.hs  Makefile  Pru.hs  PruEmu.hs  PruGen.hs  PruIO.hs  StateCont.hs  pru-trace.hs  pru.cabal  pru.hs  test-pru.hs
pru/: Pru.hs  PruGen.hs  Weave.hs  pru.cabal  pru.txt  test-pru.hs
specs/: f_soc.breakout.csv  f_soc.fbr.csv  f_soc.qn84.csv  hx8k_breakout.csv
test/: edif.hs  pru.hs  sat.hs  seq-qc.hs  seq-x.hs
verilog/: reset.v
vpi/: Makefile  cosim.c
