name: asm-tools
version: 1.0.0
cabal-version: >= 1.18
build-type: Simple
license: BSD3

Library
    default-language: Haskell98
    build-depends:   base, containers, mtl, free, keys, set-extra,
                     template-haskell, parsec, QuickCheck, array, mios, split,
                     binary, bytestring, process
    exposed-modules: Language.Seq
                     Language.Seq.App
                     Language.Seq.Arr
                     Language.Seq.C
                     Language.Seq.CPU
                     Language.Seq.Emu
                     Language.Seq.Expr
                     Language.Seq.Forth
                     Language.Seq.IfElse
                     Language.Seq.Lib
                     Language.Seq.MyHDL
                     Language.Seq.MyHDLRun
                     Language.Seq.Names
                     Language.Seq.NetList
                     Language.Seq.Prim
                     Language.Seq.Static
                     Language.Seq.Syntax
                     Language.Seq.Term
                     Language.Seq.Test.Tools
                     Language.Seq.Test.Lib
                     Language.Seq.TH
                     Language.Seq.Verilog
                     Language.Seq.VerilogRun

                     Data.AsmTools.CSV
                     Data.AsmTools.EDIF
                     Data.AsmTools.NetFun
                     Data.AsmTools.Partition
                     Data.AsmTools.PCF
                     Data.AsmTools.Protel
                     Data.AsmTools.SE
                     Data.AsmTools.SetMap
                     Data.AsmTools.VCD
                     Data.AsmTools.MT

                     Language.Pru
                     Language.Pru.Gen
                     Language.Pru.Emu
                     Language.Pru.BeagleLogic
                     Language.Pru.Lib
                     Language.Pru.Weave

-- Example FPGA HDL applications: these generate .pcf and .py and/or .v code

executable f_blink
    build-depends:  base, asm-tools
    main-is:        f_blink.hs
    hs-source-dirs: examples

executable f_soc
    build-depends:  base, asm-tools
    main-is:        f_soc.hs
    hs-source-dirs: examples



-- Tests

Test-Suite seq-qc
    default-language: Haskell98
    build-depends: base, asm-tools, split, QuickCheck, template-haskell
    type:       exitcode-stdio-1.0
    main-is:    seq-qc.hs
    hs-source-dirs: test

Test-Suite seq-x
    default-language: Haskell98
    build-depends: base, containers, keys, array, asm-tools, split, template-haskell
    type:       exitcode-stdio-1.0
    main-is:    seq-x.hs
    hs-source-dirs: test


Test-Suite pru
    default-language: Haskell98
    build-depends: base, containers, mtl, free, keys, asm-tools
    type:       exitcode-stdio-1.0
    main-is:    pru.hs
    build-depends: base
    hs-source-dirs: test


-- Just a stub for now.  Leave it commented out.
-- Test-Suite sat
--     default-language: Haskell98
--     build-depends: base, containers, mtl, mios, z3
--     type:       exitcode-stdio-1.0
--     main-is:    sat.hs
--     build-depends: base
--     hs-source-dirs: test


-- For this I only have proprietary test files, so leave commented out.
-- Test-Suite edif
--     build-depends: base, mtl, parsec, sqlite-simple, free, containers, asm-tools
--     type:       exitcode-stdio-1.0
--     main-is:    edif.hs
--     hs-source-dirs: test






