name: asm-tools-edsp
version: 1.0.0
cabal-version: >= 1.18
build-type: Simple
license: BSD3

Library
    default-language: Haskell98
    build-depends:   base, containers, mtl, free, keys, set-extra,
                     template-haskell, parsec, QuickCheck, array, split, 
                     binary, bytestring, process, unix, network, temporary,
                     llvm-hs, llvm-hs-pure, llvm-hs-pretty,
                     system-argv0, system-filepath,
                     asm-tools
    exposed-modules: 
                     Language.EDSP
                     Language.EDSP.Lib
