name: asm-tools-pru
version: 1.0.0
cabal-version: >= 1.18
build-type: Simple
license: BSD3

Library
    default-language: Haskell98
    build-depends:   base, containers, mtl, free, keys, set-extra,
                     template-haskell, parsec, QuickCheck, array, split, 
                     binary, bytestring, process, unix, network, temporary,
                     system-argv0, system-filepath,
                     asm-tools, asm-tools-seq
    exposed-modules: 
                     Language.Pru
                     Language.Pru.Gen
                     Language.Pru.Emu
                     Language.Pru.BeagleLogic
                     Language.Pru.Lib
                     Language.Pru.Weave
